force-app/main/default/objects/Default_Collection_Manager__c/Default_Collection_Manager__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Default Collection Manager</label>
</CustomObject>