force-app/main/default/objects/Default_Collection_Manager__c/fields/Direct__c.field-meta.xml
<CustomField>
    <fullName>Direct__c</fullName>
    <label>Direct</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>