force-app/main/default/objects/Default_Collection_Manager__c/fields/Front__c.field-meta.xml
<CustomField>
    <fullName>Front__c</fullName>
    <label>Front</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>