force-app/main/default/objects/Default_Collection_Manager__c/fields/Local__c.field-meta.xml
<CustomField>
    <fullName>Local__c</fullName>
    <label>Local</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>